trunk/Archive2/9d/b8fbea55b38212/output
main.cpp: In function 'auto std::rbegin(const T&)':
main.cpp:10:70: error: expected primary-expression before '{' token
     return static_cast<std::reverse_iterator< typename T::iterator>>({ std::end(t) });
                                                                      ^
main.cpp:10:70: error: expected ')' before '{' token
main.cpp:10:70: error: expected ';' before '{' token
main.cpp:10:84: error: expected ';' before '}' token
     return static_cast<std::reverse_iterator< typename T::iterator>>({ std::end(t) });
                                                                                    ^
main.cpp:10:85: error: expected primary-expression before ')' token
     return static_cast<std::reverse_iterator< typename T::iterator>>({ std::end(t) });
                                                                                     ^
